--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ section{
 }
 #time .circle svg{
     position: relative;
+    transform: rotate(270deg);
 }
 #time .circle:nth-child(1) svg{
     width: 250px;
@@ -55,5 +56,18 @@ section{
     fill: transparent;
     stroke: var(--clr);
     stroke-width: 5;
-    transform: translate(5px, 5px)
+    transform: translate(5px, 5px);
+    opacity: 0.5;
+}
+#time .circle:nth-child(1) svg circle{
+    stroke-dasharray: 760;
+    stroke-dashoffset: 760;
+}
+#time .circle:nth-child(2) svg circle{
+    stroke-dasharray: 630;
+    stroke-dashoffset: 630;
+}
+#time .circle:nth-child(3) svg circle{
+    stroke-dasharray: 510;
+    stroke-dashoffset: 510;
 }
