--- a/css/styles.css
+++ b/css/styles.css
@@ -87,4 +87,9 @@ section{
     height: 15px;
     background-color: var(--clr);
     border-radius: 50%;
+    top: -3px;
+    box-shadow: 0 0 20px var(--clr), 
+    0 0 40px var(--clr), 
+    0 0 60px var(--clr), 
+    0 0 80px var(--clr);
 }
