--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+:root{
+    --white: #fff;
+}
 *{
     padding: 0;
     margin: 0;
@@ -92,4 +95,17 @@ section{
     0 0 40px var(--clr), 
     0 0 60px var(--clr), 
     0 0 80px var(--clr);
+}
+.timeBx{
+    position: absolute;
+    inset: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    color: var(--white);
+    font-family: consolas;
+    gap: 0.5rem;
+    font-size: 1.25rem;
+    font-weight: bold;
 }
