--- a/css/styles.css
+++ b/css/styles.css
@@ -104,8 +104,8 @@ section{
     justify-content: center;
     width: 100%;
     color: var(--white);
-    font-family: consolas;
-    gap: 0.5rem;
+    font-family: sans-serif;
+    gap: 1rem;
     font-size: 1.5rem;
     font-weight: bold;
 }
